Tue Oct 23 06:29:38 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/Code_Generation_Impl.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/Code_Generation_Impl.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_Options.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/Component_Implementation.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/lang/cpp/Behavior_Generator.cpp:

          Remove iCCM compliant code flag since all code is generated
          for the iCCM architecture.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/opensplice/Traits.cpp:

          BUGFIX: Stub projects that did not contain events and contained
          components did not generate the correct project configuration.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/Project_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/Traits.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/Traits.inl:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/rtidds/Traits.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/rtidds/Traits.cpp:

          BUGFIX: The stub project was missing an important macro definition
          needed to export symbols on Windows platforms.

Tue Oct 23 03:35:12 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/iccm/compiler/Servant_File.cpp:

          BUGFIX: The iCCM compiler did not generate the correct all the
          include files if an event was defined in a different IDL file
          from the component using the event.

Thu Oct 18 18:23:20 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * MPC/config/iccm_tcpip_svnt.mpb:

          Be sure to link the TCPIP stub implementation library
          for all TCPIP servants.
